--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- pre-game form HTML -->
-    <div id="form" class="container">
+    <div id="pregame" class="container">
       <br>
       <div class="card card-outline-secondary">
         <div class="card-header">
@@ -188,6 +188,53 @@
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <button type="button" class="btn btn-primary" id="sendmessage">Send</button>
           </div>
+        </div>
+      </div>
+    </div>
+    <!-- Post Game Form -->
+    <div id="postgame" class="container" style="display: none;">
+      <br>
+      <div class="card card-outline-secondary">
+        <div class="card-header">
+            <h3 class="mb-0">ARG!</h3>
+        </div>
+        <div class="card-body">
+          <form class="form" role="form" autocomplete="off">
+            <div class="form-group row">
+                <label class="col-lg-3 col-form-label form-control-label">Player Name</label>
+                <div class="col-lg-9">
+                    <input id="name" class="form-control" type="text" placeholder="Name...">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-lg-3 col-form-label form-control-label">Participant ID</label>
+                <div class="col-lg-9">
+                    <input id="id" class="form-control" type="text" placeholder="1234">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-lg-3 col-form-label form-control-label">Experimenter</label>
+                <div class="col-lg-9">
+                    <input id="expirimenter" class="form-control" type="text">
+                </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-lg-3 col-form-label form-control-label">Opponent Name</label>
+              <select class="custom-select col-lg-9" id="comdrop">
+                <option selected>Choose Com Name</option>
+                <option value="One">One</option>
+                <option value="Two">Two</option>
+                <option value="Three">Three</option>
+              </select>
+            </div>
+            <br>
+            <div class="form-group row">
+              <label class="col-lg-3 col-form-label form-control-label"></label>
+              <div class="col-lg-9">
+                <input type="button" id="postgamesubmit" class="btn btn-primary" value="Submit">
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
