--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <input id="expirimenter" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group row">
+            <!-- <div class="form-group row">
               <label class="col-lg-3 col-form-label form-control-label">Opponent Name</label>
               <select class="custom-select col-lg-9" id="comdrop">
                 <option selected>Choose Com Name</option>
@@ -44,7 +44,7 @@
                 <option value="Two">Two</option>
                 <option value="Three">Three</option>
               </select>
-            </div>
+            </div> -->
             <br>
             <div class="form-group row">
               <label class="col-lg-3 col-form-label form-control-label"></label>
