Fix postgame form

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
         <div class="card-body">
           <form class="form" role="form" autocomplete="off">
-            <div class="form-group row">
+            <!-- <div class="form-group row">
                 <label class="col-lg-3 col-form-label form-control-label">Player Name</label>
                 <div class="col-lg-9">
                     <input id="name" class="form-control" type="text" placeholder="Name...">
@@ -227,7 +227,7 @@
                 <option value="Three">Three</option>
               </select>
             </div>
-            <br>
+            <br> -->
             <div class="form-group row">
               <label class="col-lg-3 col-form-label form-control-label"></label>
               <div class="col-lg-9">
