Bugfix for multiple lines for one trial in the CSV, added notification of what the opponent does

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="modal-header">
             <h4 class="modal-title" id="modelTitleId">You Lost!</h4>
           </div>
-          <div class="modal-body">
+          <div class="modal-body" id="loseMessage">
             Waiting for the other player to make a desicion...
           </div>
         </div>
