Debriefing form style update

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <h4 class="modal-title">Send a message to <span id="comname"></span></h4>
           </div>
           <div class="modal-body">
-            $<div class="form-group">
+            <div class="form-group">
               <label for="">Message</label>
               <textarea class="form-control" name="" id="message" rows="3"></textarea>
             </div>
@@ -422,15 +422,16 @@
       </div>
     </div>
     <div id="debriefing" style="display: none;">
-      <p class="text-center"> <span class="display-3">Debriefing</span><br><br>
+      <div class="text-center"> <h1><b>DEBRIEFING</b></h1></div>
+        <div class="text-left"><h5><br><br>
         We asked you to play this game to help us learn about differences in the ways that people deal with being frustrated
         by others. Even though we said you were playing against another person, you were really playing against the computer. The reason is we needed everyone to have EXACTLY THE SAME game experience. If a real person played against you, everyone's experience would be difference because you could get a really mean person and someone else could get a really nice person. Sometimes people play differently against a real person compared to against a computer. That's why we couldn't tell you that you were playing against the computer.
-        <br>
+        <br><br>
         This is the ONLY part of this study that involves deception. The only thing that we ask is that you do not share this
         information with anyone because it is very important that everyone in our study believes that there are real people
         involved. If you have any questions or worries, please let us know; we would like very much to discuss this with you
-        and do what we can to make sure you are comfortable with this information. 
-      </p>
+        and do what we can to make sure you are comfortable with this information. </h5>
+        </div>
     </div>
   </body>
 </html>
