Made conversion table dynamic from input of tokenConversion

--- a/index.html
+++ b/index.html
@@ -66,13 +66,7 @@
           <h2>Points: <span id="playerpoints"></span></h2>
           <div class="card">
             <h4 class="card-title">Token Conversions</h4>
-            <h5>
-              1 X <img class='token' src='images/token.png'/> = 100pts <br>
-              2 X <img class='token' src='images/token.png'/> = 210pts <br>
-              3 X <img class='token' src='images/token.png'/> = 315pts <br>
-              4 X <img class='token' src='images/token.png'/> = 420pts <br>
-              5 X <img class='token' src='images/token.png'/> = 525pts <br> 
-            </h5>
+            <div class="conversions"></div>
           </div>
           <br>
           <div class="bank card">
@@ -91,13 +85,7 @@
           <h2>Points: <span id="compoints"></span></h2>
           <div class="card">
             <h4 class="card-title">Token Conversions</h4>
-            <h5>
-              1 X <img class='token' src='images/token.png'/> = 100pts <br>
-              2 X <img class='token' src='images/token.png'/> = 210pts <br>
-              3 X <img class='token' src='images/token.png'/> = 315pts <br>
-              4 X <img class='token' src='images/token.png'/> = 420pts <br>
-              5 X <img class='token' src='images/token.png'/> = 525pts <br> 
-            </h5>
+            <div class="conversions"></div>
           </div>
           <br>
           <div class="bank card">
