Redo flow to make download CSV button on debriefing page

--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
         involved. If you have any questions or worries, please let us know; we would like very much to discuss this with you
         and do what we can to make sure you are comfortable with this information. </h5>
         </div>
+        <button class="btn btn-secondary" id="downloadbtn">Download CSV</button>
     </div>
   </body>
 </html>
