--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">Send a message to <span id="comname"></span></h4>
+            <h4 class="modal-title">Send a message to Devon<span id="comname"></span></h4>
           </div>
           <div class="modal-body">
             <div class="form-group">
